# tennis

./: .gitignore  LICENSE  README.md  github_utils.py  player_profile_anon.html  player_profile_hunterjsb.html  players.yml  pyproject.toml  ranking.csv  requirements.txt
.github/: labels.yml
cli/: README.md  cmd_match.go  cmd_workflow.go  go.mod  go.sum  main.go
docs/: MATCH_APPROVALS.md  index.html
doubles-matches/: 2025-08-23-35.yml  2025-08-24-58.yml  2025-09-04-39.yml  2025-09-04-40.yml  2025-09-04-41.yml  2025-09-09-8.yml
history/: anon.json  hunterjsb.json
matches/: 2025-06-08-12.yml  2025-08-05-3.yml  2025-08-06-1.yml  2025-08-06-10.yml  2025-08-06-15.yml  2025-08-06-5.yml  2025-08-06-7.yml  2025-08-06-8.yml  2025-08-07-5.yml  2025-08-09-1.yml  2025-08-09-18.yml  2025-08-09-21.yml  2025-08-10-28.yml  2025-08-10-35.yml  2025-08-21-32.yml
scripts/: __init__.py  build_history.py  build_pages.py  build_player_pages.py  build_schedule.py  check_branch_protection.py  elo_utils.py  generate_doubles_ranking.py  generate_singles_ranking.py  parse_doubles_issue.py  parse_issue.py  parse_singles_issue.py  ranking.py  request_reviews.py  verify_match.py
singles-matches/: 2025-08-06-1.yml  2025-08-06-60.yml  2025-08-12-25.yml  2025-08-19-29.yml  2025-08-22-46.yml  2025-08-22-54.yml  2025-08-23-48.yml  2025-08-23-50.yml  2025-08-24-52.yml  2025-08-24-56.yml  2025-08-25-37.yml  2025-09-08-45.yml  2025-09-08-47.yml  2025-09-08-6.yml  2025-09-09-49.yml  2025-09-17-11.yml  2025-09-18-13.yml  2025-09-19-17.yml  2025-09-25-22.yml
temp-rankings/: doubles-ranking.csv  (+1 more)
(+17 files in other folders)
