[project]
name = "tennis"
version = "0.1.0"
description = "SWE E-Tennis"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "pyyaml>=6.0.2",
    "requests>=2.32.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pandas-stubs>=2.3.2.250827",
    "pytest>=9.0.3",
]
